@@ -1,21 +1,0 @@
-#!/bin/sh
-
-rm -rf smidump-7.out
-mkdir smidump-7.out
-
-RC=0
-
-for mib in ${TESTMIBS} ; do
-    echo "$mib: comparing \`smidump -f types' output with dumps/$mib.types."
-    for d in `echo ${SMIPATH} | tr ':' ' '` ; do
-	if [ -f $d/$mib ] ; then break ; fi
-    done 
-    ../tools/smidump -f types $mib > smidump-7.out/$mib.types
-    WC=`diff -I smidump --ignore-blank-lines smidump-7.out/$mib.types dumps/$mib.types | wc -l`
-    if [ $WC -ne 0 ] ; then
-	echo "smidump -f types output for $mib differs from dump/$mib.types."
-	RC=1
-    fi
-done
-
-exit ${RC}
